--- a/40 Assignments/01 Module 1 Assignment/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
+++ b/40 Assignments/01 Module 1 Assignment/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
@@ -320,7 +320,7 @@ $R_A$ is neglected (energy loss).
 \section{Appendix - Matlab Code for Problem 1}
 \label{appendix:problem1}
 
-\lstinputlisting[style=Matlab-editor, basicstyle=\fontfamily{pcr}, numbers=none, keepspaces, mlshowsectionrules, basicstyle=\scriptsize]{../ACS_597_Module_1_Question_1_Monday_January_13_2025.m}
+\lstinputlisting[style=Matlab-Pyglike, basicstyle=\fontfamily{pcr}, numbers=left, keepspaces, mlshowsectionrules, basicstyle=\scriptsize]{../ACS_597_Module_1_Question_1_Monday_January_13_2025.m}
 
 
 
@@ -328,7 +328,31 @@ $R_A$ is neglected (energy loss).
 \section{Appendix - Matlab Code for Problem 2}
 \label{appendix:problem2}
 
-\lstinputlisting[style=Matlab-editor, basicstyle=\fontfamily{pcr}, numbers=none, keepspaces, mlshowsectionrules, basicstyle=\scriptsize]{../ACS_547_Module_1_Question_2_Monday_January_27_2025.m}
+\lstinputlisting[style=Matlab-Pyglike, basicstyle=\fontfamily{pcr}, numbers=left, keepspaces, mlshowsectionrules, basicstyle=\scriptsize]{../ACS_547_Module_1_Question_2_Monday_January_27_2025.m}
+
+
+
+\newpage
+\section{Appendix - Matlab Code for Problem 3}
+\label{appendix:problem3}
+
+\lstinputlisting[style=Matlab-Pyglike, basicstyle=\fontfamily{pcr}, numbers=left, keepspaces, mlshowsectionrules, basicstyle=\scriptsize]{../ACS_547_Module_1_Question_3_Wednesday_January_29_2025.m}
+
+
+
+\newpage
+\section{Appendix - Matlab Code for Problem 4}
+\label{appendix:problem4}
+
+\lstinputlisting[style=Matlab-Pyglike, basicstyle=\fontfamily{pcr}, numbers=left, keepspaces, mlshowsectionrules, basicstyle=\scriptsize]{../ACS_547_Module_1_Question_4_Wednesday_January_29_2025.m}
+
+
+
+\newpage
+\section{Appendix - Matlab Code for Problem 5}
+\label{appendix:problem5}
+
+\lstinputlisting[style=Matlab-Pyglike, basicstyle=\fontfamily{pcr}, numbers=left, keepspaces, mlshowsectionrules, basicstyle=\scriptsize]{../ACS_547_Module_1_Question_5_Friday_January_31_2025.m}
 
 
 
