--- a/40 Assignments/01 Module 1 Assignment/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
+++ b/40 Assignments/01 Module 1 Assignment/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
@@ -300,7 +300,7 @@ Table~\ref{table:mouthpieceAndPip} lists the length of the pipe section and the 
             \hline
         \end{tabular}
     \end{center}
-    \caption{Determined length of the pipe and length of the mouthpiece.}
+    \caption{Calculated length of the pipe and length of the mouthpiece.}
     \label{table:mouthpieceAndPip}
 \end{table}
 
@@ -318,14 +318,14 @@ Table~\ref{table:holePlacementSummary} summarizes the placement of the holes for
         \small
         \begin{tabular}{ | c | c | c | }
             \hline
-            \textbf{Note}  &  \textbf{Frequency [Hz]}  &  \textbf{Distance from End of Pipe [mm]}  \\
+            \textbf{Note}  &  \textbf{Frequency [Hz]}  &  \textbf{Length from End of Pipe [mm]}  \\
             \hline
                 C5  &  523      &  n/a  \\
                 \rowcolor{Gray}
-                F5  &  698      &  87.8  \\
-                A5  &  880      &  0  \\
+                F5  &  698      &  87.75  \\
+                A5  &  880      &  138.25  \\
                 \rowcolor{Gray}
-                C6  &  1,046    &  0  \\
+                C6  &  1,046    &  0.168  \\
             \hline
         \end{tabular}
     \end{center}
@@ -334,12 +334,21 @@ Table~\ref{table:holePlacementSummary} summarizes the placement of the holes for
 \end{table}
 
 
-\vspace{-0.25cm}
-\subsection*{Problem 3 - Comments}
+\vspace{0.25cm}
+Figure~\ref{figure:bugleRecorderNoteSpectrums} shows the respective spectrum for each of the bugle recorder notes.
 
-Diameters of holes should be smaller than a wavelength.
+\vspace{0.25cm}
+\begin{figure}[!htb]
 
-Issue with impedance.
+    \center
+        \includegraphics[ scale = 0.6, keepaspectratio ]{Assignment 1 - Question 3 Bugle Recorder Note Spectrums.pdf}
+        
+    \caption{Spectrum for the C5, F5, A5, and C6 bugle recorder notes.}
+    \label{figure:bugleRecorderNoteSpectrums}
+
+\end{figure}
+
+
 
 
 
