--- a/40 Assignments/01 Module 1 Assignment/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
+++ b/40 Assignments/01 Module 1 Assignment/10 Documentation/ACS 597 - Homework 1 - Friday, January 17, 2025.tex
@@ -362,7 +362,32 @@ Figure~\ref{figure:bugleRecorderNoteSpectrums} shows the respective spectrum for
 \newpage
 \section*{Problem 4 - Intake Duct}
 
+The Matlab code for this problem is listed in Appendix~\ref{appendix:problem4}.
+
 \subsection*{Problem 4a}
+
+Table~\ref{table:machNumbers} lists the Mach numbers for each pipe section.
+
+\setlength{\abovecaptionskip}{0pt}
+\vspace{0.1cm}
+{\renewcommand{\arraystretch}{1.5}
+\begin{table}[h!]
+    \begin{center}
+        \small
+        \begin{tabular}{ | c | c | }
+            \hline
+            \textbf{Pipe}  &  \textbf{Mach Number [unitless]}  \\
+            \hline
+                Inlet  &  -0.10047  \\
+                \hline
+                \rowcolor{Gray}
+                Outlet  &  -0.0062795  \\
+            \hline
+        \end{tabular}
+    \end{center}
+    \caption{Calculated Mach numbers.}
+    \label{table:machNumbers}
+\end{table}
 
 \subsection*{Problem 4b}
 
